edit bio information

--- a/src/sidebar/sidebar.component.html
+++ b/src/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
 <!-- Text -->
 <div class="col-md-10" >
     <p class="text"  >
-      Junior software developer with a passion for developing innovative programs that can have a positive impact for a organisation</p>
+      I am self taugh web developer with demonstrated experience of working with latest web frameworks  </p>
 
 
     <hr>
