--- a/src/sidebar/sidebar.component.html
+++ b/src/sidebar/sidebar.component.html
@@ -54,9 +54,9 @@
 <p class="card-text">
 
     <h4 class="card-title"><a>Education</a></h4>
-    <p class="text">CSE @Tswane university of Technology</p>
+    <p class="text">CSE @TUT</p>
     <p class ="text">2014 - 2014</p>
-  <p class="text"> Debugging and configuring the stock control software Cquential which is a system used in the warehouse for managing stock in the shelves.I used Cquential Warehouse Management  </p>
+  <p class="text">  I studied first semester of computer engineering </p>
 
     <hr>
 </div>
@@ -71,6 +71,7 @@
 </div>
 <!-- Text -->
 <div class="col-md-10" routerLink="contact" style="outline-style: none">
+  <h4 class="card-title"><a>Contact details</a></h4>
 <p class="card-text">
   <p class="text">(083) 979 3565</p>
 
@@ -91,6 +92,7 @@
 </div>
 <!-- Text -->
 <div class="col-md-10" routerLink="skill" style="outline-style: none">
+  <h4 class="card-title"><a>Professional Skills</a></h4>
 <p class="card-text">
    <!-- <app-skills></app-skills> -->
    <p class="text">React</p>
