--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark dark green" [containerInside]="false">
 
   <!-- Navbar brand -->
-  <mdb-navbar-brand><a class="navbar-brand" href="#">Front row</a></mdb-navbar-brand>
+  <mdb-navbar-brand><a class="navbar-brand">My profile</a></mdb-navbar-brand>
 
   <!-- Collapsible content -->
   <links>
@@ -10,7 +10,7 @@
     <!-- Links -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item ">
-        <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="envelope" routerLink="contact"></mdb-icon> Contact<span class="sr-only"></span></a>
+        <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="envelope"></mdb-icon> Brougth to by Front row<span class="sr-only"></span></a>
       </li>
 
 
