changed the navbar color and the bio

--- a/src/sidebar/sidebar.component.html
+++ b/src/sidebar/sidebar.component.html
@@ -16,8 +16,7 @@
 <!-- Text -->
 <div class="col-md-10" >
     <p class="text"  >
-      I am self taugh web developer with demonstrated experience of working with latest web frameworks  </p>
-
+      I am self taugh web developer with demonstrated</p>
 
     <hr>
 </div>
@@ -31,12 +30,13 @@
 </div>
 <!-- Text -->
 <div class="col-md-10" routerLink="work" style="outline-style: none">
+  <h4 class="card-title"><a>Work experience</a></h4>
 <p class="card-text">
 
-    <h4 class="card-title"><a>Work experience</a></h4>
-    <p class="text">IT support @Plumblink</p>
+
+    <p class="text">Picker @Plumblink</p>
     <p class ="text">2017 - 2018</p>
-  <p class="text"> Debugging and configuring the stock control software Cquential which is a system used in the warehouse  </p>
+  <p class="text"> Picking stocks for various branches   </p>
 
     <hr>
 </div>
@@ -51,9 +51,10 @@
 </div>
 <!-- Text -->
 <div class="col-md-10" routerLink="edu" style="outline-style: none">
+  <h4 class="card-title"><a>Education</a></h4>
 <p class="card-text">
 
-    <h4 class="card-title"><a>Education</a></h4>
+
     <p class="text">CSE @TUT</p>
     <p class ="text">2014 - 2014</p>
   <p class="text">  I studied first semester of computer engineering </p>
@@ -97,10 +98,30 @@
    <!-- <app-skills></app-skills> -->
    <p class="text">React</p>
    <p class="text">Angular</p>
+<hr>
+</div>
+
+</div>
+
+<div class="row" >
+  <div class="col-md-2">
+
+
+      <i class="far fa-calendar-minus pl-2 pt-2"></i>
+
+</div>
+<!-- Text -->
+<div class="col-md-10" routerLink="back" style="outline-style: none">
+  <h4 class="card-title"><a>Portfolio</a></h4>
+<p class="card-text">
+   <!-- <app-skills></app-skills> -->
+   <p class="text">Quick cv</p>
+   <p class="text">Fs Manager</p>
 
 </div>
 
 </div>
+
 
 </div>
 
