Added seperate components for react and angular apps

--- a/src/education/education.component.html
+++ b/src/education/education.component.html
@@ -13,7 +13,7 @@
                <h4 class="card-title"><a>Education</a></h4>
                <p class="card-text">Computer engineering@TUT</p>
                <p style ="color:#248673">2014 - 2014</p>
-             <p> I studied first semester of computer engineering this is where I was in introduced to programming.I passed C++ ,Mathematics engineering 1 ,Communication skill,Digital System 1,</p>
+             <p> I studied first semester of computer engineering this is where I was in introduced to programming.I passed C++, Mathematics engineering 1, Communication Science, Digital Systems 1</p>
              <hr>
                <!-- Button -->
               </div>
@@ -25,14 +25,32 @@
               <div class="col-md-10 " >
                <!-- Text -->
 
-               <p class="card-text">Computer Science g@UJ</p>
+               <p class="card-text">Computer Science@UJ</p>
                <p style ="color:#248673">2015 - 2015</p>
-             <p> I completed a year of studying computer science .I passed visual basics,Mathematics calculus</p>
+             <p> I completed a year of studying Computer Science .I passed Visual Basics,Mathematics calculus 1</p>
              <hr>
                <!-- Button -->
+               <div class="col-md-10 " >
+                <!-- Text -->
+
+                <p class="card-text">Software development@The Digital Academy</p>
+                <p style ="color:#248673">2019 - 2019</p>
+
+                <p>The digital academy recruits, motivate young people with a raw talent for Web and software development.a
+                  They learn practical, Hands on development skills that are needed in the real world
+                </p>
+              <hr>
+                <!-- Button -->
+               </div>
               </div>
 
+
+
+
+
+
              </div>
+
 
              </div>
 
