--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark dark green" [containerInside]="false">
+<mdb-navbar  SideClass="navbar navbar-expand-lg default-color" [containerInside]="false">
 
   <!-- Navbar brand -->
   <mdb-navbar-brand><a class="navbar-brand">My profile</a></mdb-navbar-brand>
@@ -10,7 +10,9 @@
     <!-- Links -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item ">
-        <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="envelope"></mdb-icon> Brougth to by Front row<span class="sr-only"></span></a>
+        <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="envelope"></mdb-icon> Brougth to you by Front row<span class="sr-only"></span></a>
+       
+
       </li>
 
 
