--- a/src/sidebar/sidebar.component.html
+++ b/src/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <mdb-card >
   <!-- Card -->
 <!-- Card content -->
-<div  style="background: #248673" data-step="1" data-intro="Click to view more info " data-position='right'>
+<div  style="background: #248673 ;cursor: pointer; " data-step="1" data-intro="Click to view more info " data-position='right'>
 <!-- Card image -->
 <div class="animated-icon1 float-right mt-1"></div>
 <img class="card-img-top" src="./assets/me.png" alt="Card image cap" >
@@ -16,7 +16,7 @@
 <!-- Text -->
 <div class="col-md-10" >
     <p class="text"  >
-      I am self taugh web developer with demonstrated</p>
+      I am a self taugh full stack web developer specializing mostly in JavaScript and Node.js</p>
 
     <hr>
 </div>
@@ -106,17 +106,16 @@
 <div class="row" >
   <div class="col-md-2">
 
-
-      <i class="far fa-calendar-minus pl-2 pt-2"></i>
-
+      <i class="fas fa-database pl-2 pt 2"></i>
 </div>
 <!-- Text -->
-<div class="col-md-10" routerLink="back" style="outline-style: none">
+<div class="col-md-10" style="outline-style: none">
   <h4 class="card-title"><a>Portfolio</a></h4>
 <p class="card-text">
    <!-- <app-skills></app-skills> -->
-   <p class="text">Quick cv</p>
-   <p class="text">Fs Manager</p>
+   <p  routerLink="quickCv" class="text" style="outline-style: none">Angular apps</p>
+   <p class="text" routerLink="react" style="outline-style: none">React apps</p>
+   <!-- <p class="text" routerLink="back" style="outline-style: none">Todo app</p> -->
 
 </div>
 
