Changed the bio

--- a/src/sidebar/sidebar.component.html
+++ b/src/sidebar/sidebar.component.html
@@ -110,7 +110,7 @@
 </div>
 <!-- Text -->
 <div class="col-md-10" style="outline-style: none">
-  <h4 class="card-title"><a>Portfolio</a></h4>
+  <h4 class="card-title"><a>Projects</a></h4>
 <p class="card-text">
    <!-- <app-skills></app-skills> -->
    <p  routerLink="quickCv" class="text" style="outline-style: none">Angular apps</p>
